--- a/ConfiaCarUI/package.json
+++ b/ConfiaCarUI/package.json
@@ -21,7 +21,7 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "antd": "^5.9.0",
+    "antd": "^5.16.2",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
@@ -33,6 +33,7 @@
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^1.13.1",
     "mapbox-gl-directions": "^3.0.3",
+    "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^17.0.1",
     "react-barcode": "^1.4.6",
